search page container/ issue not showing page

--- a/src/components/css/Sidebar.css
+++ b/src/components/css/Sidebar.css
@@ -1,5 +1,5 @@
 .sidebar{
-	flex: 0.2;
+	flex: 0.13;
 }
 
 .sidebar > hr{
