--- a/src/components/css/Video.css
+++ b/src/components/css/Video.css
@@ -1,7 +1,7 @@
 .video{
-	width: 270px;
+	width: 370px;
 	margin-bottom: 40px;
-	margin: 20px;
+	margin: 10px;
 	transition: 0.2s;
 }
 
