--- a/src/containers/Recomended/Recomended.css
+++ b/src/containers/Recomended/Recomended.css
@@ -1,5 +1,5 @@
 .recomended{
-	flex: 0.8;
+	flex: 0.87;
 	background-color: #f9f9f9;
 	padding: 40px 20px;
 	padding-bottom: 0;
