--- a/src/containers/SearchPage/SearchPage.css
+++ b/src/containers/SearchPage/SearchPage.css
@@ -1,5 +1,5 @@
 .searchPage{
-	flex: 0.8;
+	flex: 0.87;
 	background-color: #f9f9f9;
 	padding: 20px;
 }
